homepage is fully responsive, except for header that needs some work for very small screens

--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -9,7 +9,8 @@
     font-size: 3.5rem;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 1rem;
+    letter-spacing: 5px;
+    text-align: center;
 
     transition: all 0.2s;
 
