--- a/src/abstracts/_mixins.scss
+++ b/src/abstracts/_mixins.scss
@@ -18,47 +18,43 @@
 }
 
 // MEDIA QUERY MANAGER
-
 /*
+0 - 600px:      Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+[1200 - 2000] is where our normal styles apply
+2000px + :      Big desktop
 
-0-600px: phone
-600-900px: Tablet portrait
-900 - 1200px: Tabelet landscape
-[1200 - 1800] is where normal styles apply
-1800px + : Big desktop
-
-
-$breakpoints
+$breakpoint arguement choices:
 - phone
 - tab-port
 - tab-land
+- normal-desktop  
 - big-desktop
+
+ORDER: Base + typography > general layout + grid > page layout > components
 
 1em = 16px
 */
-
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
-        @media (max-width: 37.5em) {
+        @media only screen and (max-width: 37.5em) {
             @content;
-        }
+        } //600px
     }
-
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) {
+        @media only screen and (max-width: 56.25em) {
             @content;
-        }
+        } //900px
     }
-
     @if $breakpoint == tab-land {
-        @media (max-width: 75em) {
+        @media only screen and (max-width: 75em) {
             @content;
-        }
+        } //1200px
     }
-
     @if $breakpoint == big-desktop {
-        @media (max-width: 112.5em) {
+        @media only screen and (min-width: 125em) {
             @content;
-        }
+        } //2000
     }
 }
