--- a/src/pages/excursions/_excursion.scss
+++ b/src/pages/excursions/_excursion.scss
@@ -1,8 +1,28 @@
+@import "../../abstracts/_mixins";
+
 .excursion {
-    padding: 0 30rem;
+    padding: 0 2rem;
+    overflow: "hidden";
 }
 
-/// navBar
-.navBar {
-    // padding: 0 20rem;
+.excursion-main {
+    display: flex;
+    // justify-content: center;
+
+    max-width: 140rem;
+    margin: 8rem auto;
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+
+        @include respond(tab-port) {
+            display: block;
+        }
+    }
+
+    @include respond(tab-land) {
+        max-width: 100rem;
+    }
 }
