--- a/src/componants/footer/_footer.scss
+++ b/src/componants/footer/_footer.scss
@@ -7,7 +7,7 @@
     padding: 0 5rem;
 
     @include respond(tab-port) {
-        padding: 0 3rem;
+        padding: 0 2rem;
     }
 
     // height: 50rem;
@@ -122,7 +122,8 @@
     &__copyright {
         border-top: 1px solid RGBA(var(--color-grey-dark));
         padding-top: 2rem;
-        margin-right: 10rem;
+        margin-right: max(10rem, 10vw);
+
         text-align: center;
 
         @include respond(tab-port) {
