--- a/src/pages/excursions/excursionFilter/_excursionFilter.scss
+++ b/src/pages/excursions/excursionFilter/_excursionFilter.scss
@@ -8,7 +8,7 @@
     height: max-content;
 
     border-radius: 4px;
-    box-shadow: 0px 0px 2rem rgb(0 0 0 / 20%);
+    box-shadow: 0px 0px 2rem RGBA(0 0 0 / 20%);
     color: rgb(41, 43, 46);
     // border: 1px solid rgb(229, 229, 229);
 
