excursion-content fully responsive !!!

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,11 @@
     // overflow-x: auto !important;
 
     --excursion-clip-height: 9vw;
+    --excursion-review-box-width-1: 27vw;
+    --excursion-review-box-width-2: 42vw;
+    --excursion-review-box-width-3: 80vw;
+    --excursion-review-box-margin: 2.6vw;
+    --excursion-review-box-margin-3: 6vw;
 }
 
 * {
