--- a/src/pages/account/accountReview/_accountReview.scss
+++ b/src/pages/account/accountReview/_accountReview.scss
@@ -20,7 +20,7 @@
 
         transition: transform 5s;
 
-        width: 110rem;
+        // width: 110rem;
 
         // padding: 2rem;
         // padding-right: 4rem;
