--- a/src/pages/excursionContent/components/excursionBooking/_excursionBooking.scss
+++ b/src/pages/excursionContent/components/excursionBooking/_excursionBooking.scss
@@ -1,25 +1,48 @@
+@import "../../../../abstracts/_mixins";
+
+.booking-info {
+    width: 70%;
+    margin: 2rem 0;
+    text-align: center;
+    font-size: 1.7rem;
+    font-family: Poppins;
+    color: rgb(41, 43, 46);
+}
+
 // TODO: CREATE A STYLED COMPONENT FROM THIS
 
 .composition-excursion {
     position: relative;
 
-    // display: flex;
-    // flex-direction: column;
-    // text-align: start;
     grid-area: photo;
-    // width: 100%;
+
+    height: 40rem;
+    width: 68.5%;
+
+    @include respond(phone) {
+        height: 32rem;
+    }
+
+    @media only screen and (max-width: 29em) {
+        height: 30vw;
+        width: 60%;
+    }
 
     &__photo {
         position: absolute;
         z-index: 10;
 
         transition: all 0.2s;
-        width: 31rem;
+        width: 62%;
         // width: 45%;
 
         box-shadow: 0 1.5rem 4rem RGBA(var(--color-black), 0.4);
         border-radius: 3px;
         outline-offset: 2rem;
+
+        @media only screen and (max-width: 29em) {
+            width: 80%;
+        }
 
         &:hover {
             outline: 1.5rem solid #252397;
@@ -31,17 +54,46 @@
         &--1 {
             left: 0rem;
             top: 4rem;
+
+            @include respond(phone) {
+                left: 0rem;
+                top: 6rem;
+            }
+
+            @media only screen and (max-width: 29em) {
+                display: none;
+            }
         }
 
         &--2 {
             right: 0rem;
             top: 10rem;
+
+            @media only screen and (max-width: 29em) {
+                // right: -5rem;
+                // top: 12rem;
+
+                display: none;
+            }
         }
 
         &--3 {
             left: 10rem;
             top: 20rem;
             z-index: 11;
+
+            @include respond(phone) {
+                left: 5rem;
+                top: 18rem;
+            }
+
+            @media only screen and (max-width: 29em) {
+                display: none;
+            }
+        }
+
+        &--cover {
+            width: 100%;
         }
     }
 }
