--- a/src/pages/login/_login.scss
+++ b/src/pages/login/_login.scss
@@ -114,9 +114,9 @@
 
         background: white;
 
-        border-bottom: 3px solid transparent;
         border-radius: 5px;
         border: 1px solid #8080803d;
+        // border-bottom: 3px solid transparent;
 
         font-size: 1.5rem;
         font-family: "Lato", sans-serif;
