--- a/src/componants/reviews/_reviews.scss
+++ b/src/componants/reviews/_reviews.scss
@@ -3,7 +3,8 @@
 
 @font-face {
     font-family: Merriweather;
-    src: url("../../assets/fonts/Merriweather-Regular.ttf");
+    src: url("../../assets/fonts/Merriweather-Regular.ttf") format("truetype");
+    font-style: normal;
 
     /* other formats include: 'woff2', 'truetype, 'opentype',
                               'embedded-opentype', and 'svg' */
@@ -123,7 +124,7 @@
     &__name {
         margin-bottom: 1.5rem;
 
-        font-family: "Merriweather", serif;
+        font-family: Merriweather, serif;
         font-size: 2rem;
         font-weight: 600;
         color: $color-grey-dark-3;
