--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -14,7 +14,7 @@
     color: transparent;
 
     // color: #e0b011;
-    font-family: Merriweather, serif;
+    font-family: Merriweather;
     font-size: 3.5rem;
     font-weight: 700;
     text-transform: uppercase;
