--- a/src/pages/excursionContent/components/excursionBooking/_excursionBooking.scss
+++ b/src/pages/excursionContent/components/excursionBooking/_excursionBooking.scss
@@ -3,6 +3,7 @@
 @font-face {
     font-family: Poppins;
     src: url("../../../../assets/fonts/Poppins-SemiBold.ttf") format("truetype");
+    font-weight: 600;
     font-style: normal;
 
     /* other formats include: 'woff2', 'truetype, 'opentype',
