--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -17,7 +17,7 @@
     // color: #e0b011;
     font-family: Merriweather;
     font-size: 3.5rem;
-    font-weight: 700;
+    // font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 5px;
     text-align: center;
