--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: Merriweather;
-    src: url("../assets/fonts/Merriweather-Regular.ttf") format("truetype");
-    font-weight: 600 !important;
+    src: url("../assets/fonts/Merriweather-Bold.ttf") format("truetype");
+    // font-weight: 600 !important;
     font-style: normal;
 
     /* other formats include: 'woff2', 'truetype, 'opentype',
